@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: CollectionBrowser out of order after scanning
   FIX: TitleProxy partly rewritten. Should be more compatible with many streams
        and not be able to freeze the app any longer.
   FIX: When playing a stream with title streaming activated, the track is not
